fixed problem with timeline taking too much space and centered hero-text

--- a/css/mycss.css
+++ b/css/mycss.css
@@ -2,6 +2,10 @@ p {
   color: white;
 }
 
+#hero-text {
+  padding-top: 15%;
+}
+
 .header-title {
   color: #f50057;
 }
