--- a/css/timeline.css
+++ b/css/timeline.css
@@ -44,9 +44,7 @@
 .swiper-container-wrapper--timeline .swiper-pagination-progressbar:after {
     position: absolute;
     top: 3px;
-    /* right: -100%; */
-    /* width: 100%; */
-    width: 100vh;
+    width: 86%;
     height: 1px;
     background-color: #f500568c;
     content: "";
